# nearust

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  RELEASES.md  dist-workspace.toml  nearust.pyi  pypi_README.md  pyproject.toml  run_profiling.sh  run_profiling_basic.sh
.github/workflows/: release.yml  release_python.yml
benches/: benchmark.rs
docs/source/: cli.rst  conf.py  index.rst  install.rst  py.rst  rust.rst  usage_cli.rst  usage_py.rst
profiling/scripts/: get_version.py  profiling_cross.py  profiling_memoized.py  profiling_within.py
python/nearust/: __init__.py  _symdel.py
rust/: lib.rs  main.rs  pymod.rs  symdel.rs
src/: lib.rs  main.rs  pymod.rs
symscan/: Cargo.toml
symscan-cli/: Cargo.toml
symscan-cli/src/: main.rs
symscan-py/: Cargo.toml  dinitrogen.pyi  symscan.pyi
symscan-py/src/: lib.rs
symscan/benches/: benchmark.rs
symscan/src/: lib.rs
test_files/: cdr3b_10k_a.txt  cdr3b_10k_b.txt  results_10k_a.txt  results_10k_a_d2.txt  results_10k_cross.txt  results_10k_cross_d2.txt
