[package]
name = "nearust"
authors = ["Yuta Nagano"]
version = "0.6.1"
edition = "2021"
description = "Fast detection of similar strings"
repository = "https://github.com/yutanagano/nearust"
homepage = "https://github.com/yutanagano/nearust"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
itertools = "0.13"
rapidfuzz = "0.5"
rayon = "1.10"
pyo3 = "0.27"
numpy = "0.27"
hashbrown = { version = "0.16", features = ["rayon"] }
foldhash = "0.2"

[dev-dependencies]
criterion = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lib]
name = "nearust"
# path = "rust/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "nearust"
# path = "rust/main.rs"

[[bench]]
name = "benchmark"
harness = false
