[package]
name = "symscan-cli"
authors = ["Yuta Nagano"]
version.workspace = true
edition = "2021"
description = "Fast discovery of similar strings in bulk"
repository = "https://github.com/yutanagano/symscan"
homepage = "https://github.com/yutanagano/symscan"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
symscan = { version = "0.7.0", path = "../symscan/" }
rayon = "1.10"
