[package]
name = "symscan-py"
authors = ["Yuta Nagano"]
version.workspace = true
edition = "2021"
description = "Python bindings for symscan"
repository = "https://github.com/yutanagano/symscan"
homepage = "https://github.com/yutanagano/symscan"

[dependencies]
symscan = { version = "0.7.0", path = "../symscan/" }
pyo3 = "0.27"
numpy = "0.27"

[lib]
crate-type = ["cdylib"]
