[package]
name = "symscan"
authors = ["Yuta Nagano"]
version.workspace = true
edition = "2021"
description = "Fast discovery of similar strings in bulk"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yutanagano/symscan"
homepage = "https://github.com/yutanagano/symscan"

[dependencies]
foldhash = "0.2"
hashbrown = { version = "0.16", features = ["rayon"] }
itertools = "0.13"
rapidfuzz = "0.5"
rayon = "1.10"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
